--- a/templates/index.html
+++ b/templates/index.html
@@ -5,21 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
   </head>
   <body>
-    <h1>{{ titulo }}</h1>
-    {% for usuario in usuarios %}
+    
+    <div class="container">
+    <h1>Gestão de clientes</h1>
 
-    {% if usuario.membro_ativo %}
-      <div class="text-success">{{ usuario.nome }} - {{ usuario.membro_ativo }}</div>
-
-      {% else %}
-      <div class="text-danger">{{ usuario.nome }} - {{ usuario.membro_ativo }}</div>
-    {% endif%}
-    {% endfor%}
-
-    <a href="{{ url_for('pagina_sobre')}}">Pagina Sobre</a> 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      
+      <div c-container="{{ url_for('Cliente.form_cliente') }}"> </div>
+      <hr>
+      <h2>Lista de clientes</h2>
+      <div c-container="{{ url_for('Cliente.lista_cliente') }}"></div>
+      
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      
+    </div>
+    <script src="{{ url_for('static', filename='js/cru.js') }}"></script>
   </body>
 </html>
